# langgraph-langchain-study

./: .env.example  .gitignore  pyproject.toml
curriculum/: README.md
curriculum/00-foundations/: 00-orientation.md  01-uv-python-setup.md  02-vscode-setup.md  03-models-and-keys.md
curriculum/01-langchain-core/: 04-chat-models-messages.md  05-prompt-templates.md  06-output-parsing.md  07-lcel-runnables.md  08-streaming-async.md  09-tool-calling.md  10-structured-output.md
curriculum/02-rag/: 11-document-loaders.md  12-text-splitting.md  13-embeddings.md  14-vector-stores.md  15-retrievers-basic-rag.md  16-advanced-rag.md  17-rag-evaluation.md
curriculum/03-langgraph-core/: 18-langgraph-intro-stategraph.md  19-state-reducers.md  20-nodes-edges-routing.md  21-cycles-iteration.md  22-persistence-checkpointers.md  23-streaming.md  24-human-in-the-loop.md  25-subgraphs.md  26-memory-store.md
curriculum/04-agents/: 27-react-agent.md  28-custom-agent-graph.md  29-tool-design-patterns.md  30-plan-and-execute.md  31-reflection-self-correction.md  32-multiagent-supervisor.md  33-multiagent-collaboration.md  34-agentic-rag.md
curriculum/05-production/: 35-langsmith-tracing.md  36-langsmith-evaluation.md  37-prompt-management.md  38-testing-strategies.md  39-cost-caching-optimization.md  40-error-handling-resilience.md  41-security-guardrails.md  42-deploy-fastapi.md  43-deploy-langgraph-platform.md  44-observability-monitoring.md
curriculum/99-capstone/: 45-capstone-project.md
curriculum/appendix/: cheatsheet.md  glossary.md  (+2 more)
utils/: check_env.py  llm_models.py
